--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -59,15 +59,15 @@ jobs:
       - name: Install Python Plugins
         run: |
           python -m pip install grpcio-tools mypy-protobuf
-          # Trouver et lier le plugin gRPC Python
-          GRPC_PLUGIN=$(find /opt/hostedtoolcache/Python -name "grpc_python_plugin" 2>/dev/null | head -n 1)
-          if [ -z "$GRPC_PLUGIN" ]; then
-            GRPC_PLUGIN=$(find ~/.local -name "grpc_python_plugin" 2>/dev/null | head -n 1)
-          fi
-          if [ -n "$GRPC_PLUGIN" ]; then
-            sudo ln -sf "$GRPC_PLUGIN" /usr/local/bin/protoc-gen-grpc-python
-          fi
-          which protoc-gen-grpc-python || echo "Warning: grpc-python plugin not found"
+          # Installer le plugin standalone
+          python -m pip install grpcio
+          # Copier/lier le plugin depuis le package Python
+          PYTHON_SITE=$(python -c "import site; print(site.getsitepackages()[0])")
+          sudo cp ${PYTHON_SITE}/grpc_tools/grpc_python_plugin /usr/local/bin/protoc-gen-grpc-python 2>/dev/null || \
+          sudo ln -sf ${PYTHON_SITE}/grpc_tools/grpc_python_plugin /usr/local/bin/protoc-gen-grpc-python || \
+          sudo find /opt/hostedtoolcache/Python -name "grpc_python_plugin" -exec cp {} /usr/local/bin/protoc-gen-grpc-python \; 2>/dev/null
+          # Vérifier
+          ls -la /usr/local/bin/protoc-gen-grpc-python || echo "Plugin not found, will try direct python module"
 
       - name: Install TS Plugins
         run: |
