--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -59,24 +59,20 @@ jobs:
       - name: Install Python Plugins
         run: |
           python -m pip install grpcio-tools mypy-protobuf
-          # Trouver le plugin grpc_python_plugin
-          echo "Searching for grpc_python_plugin..."
-          find /opt/hostedtoolcache/Python -name "grpc_python_plugin" 2>/dev/null || echo "Not in hostedtoolcache"
-          find ~/.local -name "grpc_python_plugin" 2>/dev/null || echo "Not in .local"
-          # Trouver et copier le plugin
-          GRPC_PLUGIN=$(find /opt/hostedtoolcache/Python -name "grpc_python_plugin" 2>/dev/null | head -n 1)
-          if [ -z "$GRPC_PLUGIN" ]; then
-            GRPC_PLUGIN=$(find ~/.local -name "grpc_python_plugin" 2>/dev/null | head -n 1)
-          fi
-          if [ -n "$GRPC_PLUGIN" ]; then
-            echo "Found plugin at: $GRPC_PLUGIN"
-            sudo cp "$GRPC_PLUGIN" /usr/local/bin/protoc-gen-grpc_python
+          # Le plugin est dans le package grpc_tools, il faut le trouver et le lier
+          GRPC_TOOLS_DIR=$(python -c "import grpc_tools; import os; print(os.path.dirname(grpc_tools.__file__))")
+          echo "grpc_tools directory: $GRPC_TOOLS_DIR"
+          ls -la "$GRPC_TOOLS_DIR"
+          # Chercher le binaire du plugin
+          find "$GRPC_TOOLS_DIR" -type f -name "*grpc*" -o -name "*plugin*" | head -20
+          # Copier le binaire s'il existe
+          if [ -f "$GRPC_TOOLS_DIR/grpc_python_plugin" ]; then
+            sudo cp "$GRPC_TOOLS_DIR/grpc_python_plugin" /usr/local/bin/protoc-gen-grpc_python
             sudo chmod +x /usr/local/bin/protoc-gen-grpc_python
-            echo "Installed to /usr/local/bin/protoc-gen-grpc_python"
-            ls -la /usr/local/bin/protoc-gen-grpc_python
           else
-            echo "ERROR: grpc_python_plugin not found!"
-            exit 1
+            # Le plugin n'existe pas comme binaire standalone, il faut l'extraire
+            echo "Plugin not found as standalone binary. Checking package contents..."
+            python -c "import grpc_tools; print(dir(grpc_tools))"
           fi
 
       - name: Install TS Plugins
